--- a/NoteKeeper/NoteKeeper/MainWindow.xaml
+++ b/NoteKeeper/NoteKeeper/MainWindow.xaml
@@ -8,6 +8,9 @@
         Title="MainWindow" Height="350" Width="525"
         d:DataContext="{d:DesignInstance d:Type=noteKeeper:MainVM}"
         x:Name="RootWnd">
+    <Window.InputBindings>
+        <KeyBinding Key="Insert" Command="{Binding AddNoteCommand}" />
+    </Window.InputBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -77,7 +80,7 @@
                                 <Setter.Value>
                                     <DataTemplate>
                                         <TextBox Text="{Binding Header, Mode=TwoWay}" BorderThickness="1"
-                                                 BorderBrush="LightGreen" />
+                                                 BorderBrush="LightGreen" Loaded="FrameworkElement_OnLoaded" />
                                     </DataTemplate>
                                 </Setter.Value>
                             </Setter>
@@ -107,7 +110,14 @@
                                                     </ItemsPanelTemplate>
                                                 </ItemsControl.ItemsPanel>
                                             </ItemsControl>
-                                            <TextBox Grid.Row="1" />
+
+                                            <TextBox Grid.Row="1" x:Name="TagSearchBox" />
+                                            <noteKeeper:AutoCompleteSearchControl
+                                                IsOpen="True"
+                                                ItemsSource="{Binding ElementName=RootWnd, Path=DataContext.TagsStr}"
+                                                ItemToSearch="{Binding ElementName=TagSearchBox, Path=Text}"
+                                                PlacementTarget="{Binding ElementName=TagSearchBox}"
+                                                Grid.Row="1" />
                                         </Grid>
 
                                     </DataTemplate>
